Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "mn122:2.3": "Zu dieser Zeit waren in der Wohnung des Sakyers Kāḷakhemaka viele Ruheplätze ausgebreitet worden. ",
   "mn122:2.4": "Der Buddha sah das ",
   "mn122:2.5": "und dachte: ",
-  "mn122:2.6": "„Da sind viele Ruheplätze ausgebreitet worden; "
+  "mn122:2.6": "„Da sind viele Ruheplätze ausgebreitet worden; ",
+  "mn122:2.7": "leben hier viele Mönche und Nonnen?“ "
 }
