Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -9,5 +9,6 @@
   "mn122:2.4": "Der Buddha sah das ",
   "mn122:2.5": "und dachte: ",
   "mn122:2.6": "„Da sind viele Ruheplätze ausgebreitet worden; ",
-  "mn122:2.7": "leben hier viele Mönche und Nonnen?“ "
+  "mn122:2.7": "leben hier viele Mönche und Nonnen?“ ",
+  "mn122:2.8": "Zu dieser Zeit war der Ehrwürdige Ānanda zusammen mit mehreren Mönchen und Nonnen dabei, in der Wohnung des Sakyers Ghaṭa Roben zu fertigen. "
 }
