--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "mn122:2.7": "leben hier viele Mönche und Nonnen?“ ",
   "mn122:2.8": "Zu dieser Zeit war der Ehrwürdige Ānanda zusammen mit mehreren Mönchen und Nonnen dabei, in der Wohnung des Sakyers Ghaṭa Roben zu fertigen. ",
   "mn122:2.9": "Da kam der Buddha am späten Nachmittag aus seiner Klausur und ging zur Wohnung des Sakyers Ghaṭa. Er setzte sich auf den ausgebreiteten Sitz ",
-  "mn122:2.10": "und sagte zum Ehrwürdigen Ānanda: "
+  "mn122:2.10": "und sagte zum Ehrwürdigen Ānanda: ",
+  "mn122:2.11": "„In der Wohnung des Sakyers Kāḷakhemaka sind viele Ruheplätze ausgebreitet worden; "
 }
