Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -15,5 +15,6 @@
   "mn122:2.10": "und sagte zum Ehrwürdigen Ānanda: ",
   "mn122:2.11": "„In der Wohnung des Sakyers Kāḷakhemaka sind viele Ruheplätze ausgebreitet worden; ",
   "mn122:2.12": "leben hier viele Mönche und Nonnen?“ ",
-  "mn122:2.14": "„Richtig, Herr, hier leben viele Mönche und Nonnen. "
+  "mn122:2.14": "„Richtig, Herr, hier leben viele Mönche und Nonnen. ",
+  "mn122:2.15": "Gerade ist die Zeit zum Robennähen.“ "
 }
