Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "mn122:2.11": "„In der Wohnung des Sakyers Kāḷakhemaka sind viele Ruheplätze ausgebreitet worden; ",
   "mn122:2.12": "leben hier viele Mönche und Nonnen?“ ",
   "mn122:2.14": "„Richtig, Herr, hier leben viele Mönche und Nonnen. ",
-  "mn122:2.15": "Gerade ist die Zeit zum Robennähen.“ "
+  "mn122:2.15": "Gerade ist die Zeit zum Robennähen.“ ",
+  "mn122:3.1": "„Ānanda, ein Mönch, der Gesellschaft und Gruppen genießt, der sie liebt und daran hängt, sie zu genießen, leuchtet  nicht. "
 }
