Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "mn122:2.12": "leben hier viele Mönche und Nonnen?“ ",
   "mn122:2.14": "„Richtig, Herr, hier leben viele Mönche und Nonnen. ",
   "mn122:2.15": "Gerade ist die Zeit zum Robennähen.“ ",
-  "mn122:3.1": "„Ānanda, ein Mönch, der Gesellschaft und Gruppen genießt, der sie liebt und daran hängt, sie zu genießen, leuchtet  nicht. "
+  "mn122:3.1": "„Ānanda, ein Mönch, der Gesellschaft und Gruppen genießt, der sie liebt und daran hängt, sie zu genießen, leuchtet  nicht. ",
+  "mn122:3.2": "Es ist ganz unmöglich, dass ein solcher Mönch das Glück der Entsagung, das Glück der Abgeschiedenheit, das Glück des Friedens, das Glück des Erwachens erlangen kann, wann immer er will, ohne Mühe und Not. "
 }
