--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "mn122:2.15": "Gerade ist die Zeit zum Robennähen.“ ",
   "mn122:3.1": "„Ānanda, ein Mönch, der Gesellschaft und Gruppen genießt, der sie liebt und daran hängt, sie zu genießen, leuchtet  nicht. ",
   "mn122:3.2": "Es ist ganz unmöglich, dass ein solcher Mönch das Glück der Entsagung erlangen kann, das Glück der Abgeschiedenheit, das Glück des Friedens, das Glück des Erwachens, wann immer er will, ohne Mühe und Not. ",
-  "mn122:3.3": "Aber man sollte erwarten, dass ein Mönch. der allein lebt und sich von der Gruppe zurückzieht, das Glück der Entsagung erlangen kann, das Glück der Abgeschiedenheit, das Glück des Friedens, das Glück des Erwachens, wann immer er will, ohne Mühe und Not. "
+  "mn122:3.3": "Aber man sollte erwarten, dass ein Mönch. der allein lebt und sich von der Gruppe zurückzieht, das Glück der Entsagung erlangen kann, das Glück der Abgeschiedenheit, das Glück des Friedens, das Glück des Erwachens, wann immer er will, ohne Mühe und Not. ",
+  "mn122:4.1": "Es ist wirklich ganz unmöglich, Ānanda, dass ein Mönch, der Gesellschaft genießt, in die Freiheit des Herzens eintreten und darin verweilen wird, weder in eine zeitweilige, die angenehm ist, noch in eine dauerhafte, unerschütterliche. "
 }
