Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -7,6 +7,6 @@
   "sn22.89:1.6": "Speriamo sia tollerabile, sia sopportabile per te, amico, speriamo che le sensazioni spiacevoli vadano via e non aumentino, e che si manifesti il loro andare via e non l’aumentare. ",
   "sn22.89:1.7": "“Si, amico,” annuì il Venerabile Dāsaka ai cercatori anziani e giunto dal Venerabile Khemako, disse: ",
   "sn22.89:1.10": "No, amico, non è tollerabile, né sopportabile.... ",
-  "sn22.89:2.6": "Amico, il Buddha ci ha detto che ci sono cinque cataste soggette a incandescenza: ",
+  "sn22.89:2.6": "Amico, il Buddha ci ha detto che ci sono cinque cataste ardenti: ",
   "sn22.89:2.7": "forma/materia, sensazione, percezione, conformazione, coscienza. "
 }
