Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -8,5 +8,6 @@
   "sn22.89:1.7": "“Si, amico,” annuì il Venerabile Dāsaka ai cercatori anziani e giunto dal Venerabile Khemako, disse: ",
   "sn22.89:1.10": "No, amico, non è tollerabile, né sopportabile.... ",
   "sn22.89:2.6": "Amico, il Buddha ci ha detto che ci sono cinque cataste ardenti: ",
-  "sn22.89:2.7": "forma/materia, sensazione, percezione, conformazione, coscienza. "
+  "sn22.89:2.7": "forma/materia, sensazione, percezione, conformazione, coscienza. ",
+  "sn22.89:2.8": "il Venerabile Khemako in queste cinque cataste ardenti "
 }
