--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.32_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.32_translation-de-sabbamitta.json
@@ -12,7 +12,7 @@
   "sn56.32:2.5": "‚Ohne die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt, wahrhaftig zu verstehen, will ich richtig dem Leiden ein Ende machen.‘ ",
   "sn56.32:2.6": "Das ist nicht möglich. ",
   "sn56.32:3.1": "Aber angenommen, da würde jemand sagen: ",
-  "sn56.32:3.2": "‚Nachdem ich die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt, wahrhaftig erfasst habe, will ich dem Leiden gänzlich ein Ende machen.‘ ",
+  "sn56.32:3.2": "‚Nachdem ich die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt, wahrhaftig erfasst habe, will ich richtig dem Leiden ein Ende machen.‘ ",
   "sn56.32:3.3": "Das ist möglich. ",
   "sn56.32:4.1": "Wie wenn jemand sagen würde: ",
   "sn56.32:4.2": "‚Ich will aus Lotusblättern oder Blättern der Flamme des Waldes oder der Kamelhufliane einen Korb machen und darin Wasser oder eine Palmfrucht tragen.‘ ",
