--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -9,5 +9,5 @@
   "sn22.89:1.10": "No, amico, non è tollerabile, né sopportabile.... ",
   "sn22.89:2.6": "Amico, il Buddha ci ha detto che ci sono cinque cataste ardenti: ",
   "sn22.89:2.7": "forma/materia, sensazione, percezione, conformazione, coscienza. ",
-  "sn22.89:2.8": "il Venerabile Khemako vede in queste cinque cataste ardenti un proprio se o come proprie? "
+  "sn22.89:2.8": "il Venerabile Khemako vede in queste cinque cataste ardenti un proprio se o le prende come proprie? "
 }
