--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "mn122:4.2": "Aber es ist möglich, dass ein Mönch, der allein lebt und sich von der Gruppe zurückzieht, in die Freiheit des Herzens eintreten und darin verweilen wird, entweder in eine zeitweilige, die angenehm ist, oder in eine dauerhafte, unerschütterliche. ",
   "mn122:5.1": "Ānanda, ich sehe kein einziges Bild, dessen Verfall und Zugrundegehen bei jemandem, der sich danach sehnt und es begehrt, nicht zu Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis führen würde. ",
   "mn122:6.1": "Doch den Klargewordene erwachte zu dieser Meditation: nämlich ",
-  "mn122:6.2": "innerlich in Leerheit einzutreten und darin zu verweilen, indem man den Geist von allen Merkmalen abwendet. "
+  "mn122:6.2": "innerlich in Leerheit einzutreten und darin zu verweilen, indem man den Geist von allen Merkmalen abwendet. ",
+  "mn122:6.3": "Nun angenommen, Mönche, Nonnen, Laienmänner, Laienfrauen, Herrscher und deren Minister und Lehrer anderer Konfessionen und deren Schüler besuchen den Klargewordenen, während er diese Meditation übt. "
 }
