--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -12,5 +12,6 @@
   "sn22.89:2.8": "il Venerabile Khemako vede in queste cinque cataste ardenti un proprio se o le prende come proprie? ",
   "sn22.89:3.8": "Amico, io certamente non vedo in queste cinque cataste ardenti un qualcosa che sia io o ne' che mi appartenga ",
   "sn22.89:4.10": "Abbiamo sentito che il Venerabile Khemako non vede in queste cinque cataste ardenti un proprio se ne' le prende come proprie. ",
-  "sn22.89:4.11": "In quel caso il venerabile Khemako è un Arahant, ha distrutto gli impulsi (asava). "
+  "sn22.89:4.11": "In quel caso il venerabile Khemako è un Arahant, ha distrutto gli impulsi (asava). ",
+  "sn22.89:5.8": "Amico, io certamente non vedo in queste cinque cataste ardenti un qualcosa che sia io o ne' che mi appartenga, ne' io sono un arahant che ha distrutto gli impulsi (asava) "
 }
