Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -15,5 +15,6 @@
   "sn22.89:4.11": "In quel caso il venerabile Khemako è un Arahant, ha distrutto gli impulsi (asava). ",
   "sn22.89:5.8": "Amico, io certamente non vedo in queste cinque cataste ardenti un qualcosa che sia io o ne' che mi appartenga, ne' io sono un arahant che ha distrutto gli impulsi (asava) ",
   "sn22.89:5.9": "anche se riguardo queste cinque cataste ardenti non vedo ne' un attitudine a dire \"Io esisto\" o \"questo sono io\" ",
-  "sn22.89:7.3": "questo che dici \"io sono\",  che cos'e' che dici \"io sono\"? "
+  "sn22.89:7.3": "questo che dici \"io sono\",  che cos'e' che dici \"io sono\"? ",
+  "sn22.89:7.4": "Dici sono la materia, o dici sono un'altra materia? "
 }
