--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -18,6 +18,6 @@
   "sn22.89:7.3": "questo che dici \"io sono\",  che cos'e' che dici \"io sono\"? ",
   "sn22.89:7.4": "Dici sono la materia, o dici sono un'altra materia? ",
   "sn22.89:8.10": "Basta, amico Dāsaka, cos'e' questo gioco di andare e venire? ",
-  "sn22.89:8.11": "portando un bastone ??? ",
+  "sn22.89:8.11": "reggendomi su un bastone ??? ",
   "sn22.89:8.12": "Io andro' dove ci sono i monaci anziani "
 }
