--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -19,5 +19,6 @@
   "sn22.89:7.4": "Dici sono la materia, o dici sono un'altra materia? ",
   "sn22.89:8.10": "Basta, amico Dāsaka, cos'e' questo gioco di andare e venire? ",
   "sn22.89:8.11": "reggendomi su un bastone ??? ",
-  "sn22.89:8.12": "Io andro' dove ci sono i monaci anziani "
+  "sn22.89:8.12": "Io andro' dove ci sono i monaci anziani ",
+  "sn22.89:9.1": "xx "
 }
