--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -20,5 +20,6 @@
   "sn22.89:8.10": "Basta, amico Dāsaka, cos'e' questo gioco di andare e venire? ",
   "sn22.89:8.11": "reggendomi su un bastone ??? ",
   "sn22.89:8.12": "Io andro' dove ci sono i monaci anziani ",
-  "sn22.89:9.1": "xx "
+  "sn22.89:9.1": "xx ",
+  "sn22.89:9.2": "Avendo concluso una conversazione piacevole/cordiale, memorabile, si sedette di layo. "
 }
