--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "mn122:6.1": "Doch den Klargewordene erwachte zu dieser Meditation: nämlich ",
   "mn122:6.2": "innerlich in Leerheit einzutreten und darin zu verweilen, indem man den Geist von allen Merkmalen abwendet. ",
   "mn122:6.3": "Nun angenommen, Mönche, Nonnen, Laienmänner, Laienfrauen, Herrscher und deren Minister und Lehrer anderer Konfessionen und deren Schüler besuchen den Klargewordenen, während er diese Meditation übt. ",
-  "mn122:6.4": "In diesem Fall neigt sein Geist sich zur Abgeschiedenheit, strebt zur Abgeschiedenheit und richtet sich zur Abgeschiedenheit aus, er ist zurückgezogen und liebt die Entsagung und ist mit den befleckenden Einflüssen völlig fertig; so hält er ihnen ausnahmslos einen Vortrag, in dem die Betonung darauf liegt, sie zu entlassen. "
+  "mn122:6.4": "In diesem Fall neigt sein Geist sich zur Abgeschiedenheit, strebt zur Abgeschiedenheit und richtet sich zur Abgeschiedenheit aus, er ist zurückgezogen und liebt die Entsagung und ist mit den befleckenden Einflüssen völlig fertig; so hält er ihnen ausnahmslos einen Vortrag, in dem die Betonung darauf liegt, sie zu entlassen. ",
+  "mn122:7.1": "Wenn daher ein Mönch wünscht: "
 }
