--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -21,5 +21,6 @@
   "sn22.89:8.11": "reggendomi su un bastone ??? ",
   "sn22.89:8.12": "Io andro' dove ci sono i monaci anziani ",
   "sn22.89:9.1": "xx ",
-  "sn22.89:9.2": "Avendo concluso una conversazione piacevole/cordiale, memorabile, si sedette di layo. "
+  "sn22.89:9.2": "Avendo concluso una conversazione piacevole/cordiale, memorabile, si sedette di layo. ",
+  "sn22.89:9.10": "Certamente non dico io sono la materia, ne' dico io sono un'altra materia "
 }
