Translations by ayyasoma to translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json

--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -22,5 +22,6 @@
   "sn22.89:8.12": "Io andro' dove ci sono i monaci anziani ",
   "sn22.89:9.1": "xx ",
   "sn22.89:9.2": "Avendo concluso una conversazione piacevole/cordiale, memorabile, si sedette di layo. ",
-  "sn22.89:9.10": "Certamente non dico io sono la materia, ne' dico io sono un'altra materia "
+  "sn22.89:9.10": "Certamente non dico io sono la materia, ne' dico io sono un'altra materia ",
+  "sn22.89:9.15": "x "
 }
