--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -25,5 +25,6 @@
   "sn22.89:9.10": "Certamente non dico io sono la materia, ne' dico io sono un'altra materia ",
   "sn22.89:9.15": "x ",
   "sn22.89:10.1": "E' come l'odore di un loto o di un.... ",
-  "sn22.89:10.2": "Chi potrebbe dire questo: 'l'odore del petalo, o l'odore del colore, o l'odore del pistillo,' o correttamente potrebbe dire parlando questo? "
+  "sn22.89:10.2": "Chi potrebbe dire questo: 'l'odore del petalo, o l'odore del colore, o l'odore del pistillo,' o correttamente potrebbe dire parlando questo? ",
+  "sn22.89:10.4": "E quindi come dovreste rispondere correttamente? "
 }
