--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "mn122:6.4": "In diesem Fall neigt sein Geist sich zur Abgeschiedenheit, strebt zur Abgeschiedenheit und richtet sich zur Abgeschiedenheit aus, er ist zurückgezogen und liebt die Entsagung und ist mit den befleckenden Einflüssen völlig fertig; so hält er ihnen ausnahmslos einen Vortrag, in dem die Betonung darauf liegt, sie zu entlassen. ",
   "mn122:7.1": "Wenn daher ein Mönch wünscht: ",
   "mn122:7.2": "‚Dass ich doch innerlich in Leerheit eintrete und darin verweile!‘, so soll er seinen Geist innerlich stillen, sich setzen, eins werden und im Samādhi versinken lassen. ",
-  "mn122:7.3": "Und wie stillt ein Mönch seinen Geist innerlich, lässt ihn sich setzen, eins werden und im Samādhi versinken? "
+  "mn122:7.3": "Und wie stillt ein Mönch seinen Geist innerlich, lässt ihn sich setzen, eins werden und im Samādhi versinken? ",
+  "mn122:8.1": "Da tritt ein Mönch, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … "
 }
