--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -28,5 +28,6 @@
   "sn22.89:10.2": "Chi potrebbe dire questo: 'l'odore del petalo, o l'odore del colore, o l'odore del pistillo,' o correttamente potrebbe dire parlando questo? ",
   "sn22.89:10.4": "E quindi come dovreste rispondere correttamente? ",
   "sn22.89:10.5": "l'odore del fiore, e' il modo corretto, ",
-  "sn22.89:10.6": "per questo io dico che la materia non e' me... "
+  "sn22.89:10.6": "per questo io dico che la materia non e' me... ",
+  "sn22.89:11.1": "Quando le cinque catene inferiori sono state abbandonate dal nobile discepolo, per quello allora e': \"nelle cinque cataste ardenti qualsiasi residuo di concetto io sono, desiderio io sono, tendenza io sono, e' stato sradicato "
 }
