Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -33,5 +33,6 @@
   "mn122:8.1": "Da tritt ein Mönch, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin … ",
   "mn122:8.2": "in die zweite Vertiefung … ",
   "mn122:8.3": "in die dritte Vertiefung … ",
-  "mn122:8.4": "in die vierte Vertiefung. "
+  "mn122:8.4": "in die vierte Vertiefung. ",
+  "mn122:8.5": "So stillt ein Mönch seinen Geist innerlich, lässt ihn sich setzen, eins werden und im Samādhi versinken. "
 }
