--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "mn122:8.2": "in die zweite Vertiefung … ",
   "mn122:8.3": "in die dritte Vertiefung … ",
   "mn122:8.4": "in die vierte Vertiefung. ",
-  "mn122:8.5": "So stillt ein Mönch seinen Geist innerlich, lässt ihn sich setzen, eins werden und im Samādhi versinken. "
+  "mn122:8.5": "So stillt ein Mönch seinen Geist innerlich, lässt ihn sich setzen, eins werden und im Samādhi versinken. ",
+  "mn122:9.1": "Er richtet den Geist innerlich auf Leerheit aus, "
 }
