Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -5,5 +5,6 @@
   "dhp157:1": "Kome je do samog sebe stalo, ",
   "dhp157:2": "nek dobro na sebe pazi, ",
   "dhp157:3": "barem u jednom od tri dela noći ",
-  "dhp157:4": "nek ovaj mudrac na oprezu bude. "
+  "dhp157:4": "nek ovaj mudrac na oprezu bude. ",
+  "dhp158:1": "U dobrom prvo sebe ustali, "
 }
