Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -8,5 +8,6 @@
   "dhp157:4": "nek ovaj mudrac na oprezu bude. ",
   "dhp158:1": "U dobrom prvo sebe ustali, ",
   "dhp158:2": "tek onda upućuj druge, ",
-  "dhp158:3": "u istinskom znalcu "
+  "dhp158:3": "u istinskom znalcu ",
+  "dhp158:4": "nečistoća zaista nema. "
 }
