--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -9,5 +9,6 @@
   "dhp158:1": "U dobrom prvo sebe ustali, ",
   "dhp158:2": "tek onda upućuj druge, ",
   "dhp158:3": "u istinskom znalcu ",
-  "dhp158:4": "nečistoća zaista nema. "
+  "dhp158:4": "nečistoća zaista nema. ",
+  "dhp159:1": "O, kad bismo činili uvek "
 }
