Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dhp158:2": "tek onda upućuj druge, ",
   "dhp158:3": "u istinskom znalcu ",
   "dhp158:4": "nečistoća zaista nema. ",
-  "dhp159:1": "O, kad bismo činili uvek "
+  "dhp159:1": "O, kad bismo činili uvek ",
+  "dhp159:2": "ono što drugima savetujemo. "
 }
