--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -36,6 +36,6 @@
   "mn122:8.4": "in die vierte Vertiefung. ",
   "mn122:8.5": "So stillt ein Mönch seinen Geist innerlich, lässt ihn sich setzen, eins werden und im Samādhi versinken. ",
   "mn122:9.1": "Er richtet den Geist innerlich auf Leerheit aus, ",
-  "mn122:9.2": "doch sein Geist ist diesbezüglich nicht begierig, zuversichtlich, fest verankert und entschlossen. ",
+  "mn122:9.2": "aber sein Geist ist diesbezüglich nicht begierig, zuversichtlich, fest verankert und entschlossen. ",
   "mn122:9.3": "In diesem Fall versteht er: "
 }
