--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dhp158:4": "nečistoća zaista nema. ",
   "dhp159:1": "O, kad bismo činili uvek ",
   "dhp159:2": "ono što drugima savetujemo. ",
-  "dhp159:3": "Tek dobro obuzdan može učiti druge. "
+  "dhp159:3": "Tek dobro obuzdan može učiti druge. ",
+  "dhp159:4": "Sebe je, zaista, teško krotiti. "
 }
