Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -38,5 +38,6 @@
   "mn122:9.1": "Er richtet den Geist innerlich auf Leerheit aus, ",
   "mn122:9.2": "aber sein Geist ist diesbezüglich nicht begierig, zuversichtlich, fest verankert und entschlossen. ",
   "mn122:9.3": "In diesem Fall versteht er: ",
-  "mn122:9.4": "‚Ich richte meinen Geist innerlich auf Leerheit aus, aber mein Geist ist diesbezüglich nicht begierig, zuversichtlich, fest verankert und entschlossen.‘ "
+  "mn122:9.4": "‚Ich richte meinen Geist innerlich auf Leerheit aus, aber mein Geist ist diesbezüglich nicht begierig, zuversichtlich, fest verankert und entschlossen.‘ ",
+  "mn122:9.5": "So ist sie sich der Lage bewusst. "
 }
