--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -40,5 +40,6 @@
   "mn122:9.3": "In diesem Fall versteht er: ",
   "mn122:9.4": "‚Ich richte meinen Geist innerlich auf Leerheit aus, aber mein Geist ist diesbezüglich nicht begierig, zuversichtlich, fest verankert und entschlossen.‘ ",
   "mn122:9.5": "So ist sie sich der Lage bewusst. ",
-  "mn122:9.6": "Er richtet den Geist äußerlich auf Leerheit aus … "
+  "mn122:9.6": "Er richtet den Geist äußerlich auf Leerheit aus … ",
+  "mn122:9.7": "Er richtet den Geist innerlich und äußerlich auf Leerheit aus … "
 }
