Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dhp159:1": "O, kad bismo činili uvek ",
   "dhp159:2": "ono što drugima savetujemo. ",
   "dhp159:3": "Tek dobro obuzdan može učiti druge. ",
-  "dhp159:4": "Sebe je, zaista, teško krotiti. "
+  "dhp159:4": "Sebe je, zaista, teško krotiti. ",
+  "dhp160:1": "Svako je zaista sam sebi utočište. "
 }
