--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -14,5 +14,6 @@
   "dhp159:2": "ono što drugima savetujemo. ",
   "dhp159:3": "Tek dobro obuzdan može učiti druge. ",
   "dhp159:4": "Sebe je, zaista, teško krotiti. ",
-  "dhp160:1": "Svako je zaista sam sebi utočište. "
+  "dhp160:1": "Svako je zaista sam sebi utočište. ",
+  "dhp160:2": "A ko bi drugi to mogao biti? "
 }
