--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "mn122:9.5": "So ist sie sich der Lage bewusst. ",
   "mn122:9.6": "Er richtet den Geist äußerlich auf Leerheit aus … ",
   "mn122:9.7": "Er richtet den Geist innerlich und äußerlich auf Leerheit aus … ",
-  "mn122:9.8": "Er richtet den Geist auf das Unbewegte aus, "
+  "mn122:9.8": "Er richtet den Geist auf das Unbewegte aus, ",
+  "mn122:9.9": "aber sein Geist ist diesbezüglich nicht begierig, zuversichtlich, fest verankert und entschlossen. "
 }
