Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -16,5 +16,6 @@
   "dhp159:4": "Sebe je, zaista, teško krotiti. ",
   "dhp160:1": "Svako je zaista sam sebi utočište. ",
   "dhp160:2": "A ko bi drugi to mogao biti? ",
-  "dhp160:3": "Kad sami sebe obuzdamo, "
+  "dhp160:3": "Kad sami sebe obuzdamo, ",
+  "dhp160:4": "zaštitu teško dostižnu stičemo. "
 }
