--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "mn122:9.7": "Er richtet den Geist innerlich und äußerlich auf Leerheit aus … ",
   "mn122:9.8": "Er richtet den Geist auf das Unbewegte aus, ",
   "mn122:9.9": "aber sein Geist ist diesbezüglich nicht begierig, zuversichtlich, fest verankert und entschlossen. ",
-  "mn122:9.10": "In diesem Fall versteht er: "
+  "mn122:9.10": "In diesem Fall versteht er: ",
+  "mn122:9.11": "‚Ich richte meinen Geist auf das Unbewegte aus, aber mein Geist ist diesbezüglich nicht begierig, zuversichtlich, fest verankert und entschlossen.‘ "
 }
