--- a/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn122_translation-de-sabbamitta.json
@@ -39,7 +39,7 @@
   "mn122:9.2": "aber sein Geist ist diesbezüglich nicht begierig, zuversichtlich, fest verankert und entschlossen. ",
   "mn122:9.3": "In diesem Fall versteht er: ",
   "mn122:9.4": "‚Ich richte meinen Geist innerlich auf Leerheit aus, aber mein Geist ist diesbezüglich nicht begierig, zuversichtlich, fest verankert und entschlossen.‘ ",
-  "mn122:9.5": "So ist sie sich der Lage bewusst. ",
+  "mn122:9.5": "So ist er sich der Lage bewusst. ",
   "mn122:9.6": "Er richtet den Geist äußerlich auf Leerheit aus … ",
   "mn122:9.7": "Er richtet den Geist innerlich und äußerlich auf Leerheit aus … ",
   "mn122:9.8": "Er richtet den Geist auf das Unbewegte aus, ",
