--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -17,5 +17,6 @@
   "dhp160:1": "Svako je zaista sam sebi utočište. ",
   "dhp160:2": "A ko bi drugi to mogao biti? ",
   "dhp160:3": "Kad sami sebe obuzdamo, ",
-  "dhp160:4": "zaštitu teško dostižnu stičemo. "
+  "dhp160:4": "zaštitu teško dostižnu stičemo. ",
+  "dhp161:1": "Sami činimo zlo, "
 }
