Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -18,5 +18,6 @@
   "dhp160:2": "A ko bi drugi to mogao biti? ",
   "dhp160:3": "Kad sami sebe obuzdamo, ",
   "dhp160:4": "zaštitu teško dostižnu stičemo. ",
-  "dhp161:1": "Sami činimo zlo, "
+  "dhp161:1": "Sami činimo zlo, ",
+  "dhp161:2": "u nama se ono rađa, u nama izvire. "
 }
