--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -19,5 +19,6 @@
   "dhp160:3": "Kad sami sebe obuzdamo, ",
   "dhp160:4": "zaštitu teško dostižnu stičemo. ",
   "dhp161:1": "Sami činimo zlo, ",
-  "dhp161:2": "u nama se ono rađa, u nama izvire. "
+  "dhp161:2": "u nama se ono rađa, u nama izvire. ",
+  "dhp161:3": "I ono budalu smrvi, "
 }
