--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -21,5 +21,6 @@
   "dhp161:1": "Sami činimo zlo, ",
   "dhp161:2": "u nama se ono rađa, u nama izvire. ",
   "dhp161:3": "I ono budalu smrvi, ",
-  "dhp161:4": "kao i dijamant kamen u kojem se stvori. "
+  "dhp161:4": "kao i dijamant kamen u kojem se stvori. ",
+  "dhp162:1": "Naša nas zlodela potpuno obuzmu, "
 }
