Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -23,5 +23,6 @@
   "dhp161:3": "I ono budalu smrvi, ",
   "dhp161:4": "kao i dijamant kamen u kojem se stvori. ",
   "dhp162:1": "Naša nas zlodela potpuno obuzmu, ",
-  "dhp162:2": "kao puzavica stablo sala, "
+  "dhp162:2": "kao puzavica stablo sala, ",
+  "dhp162:3": "i tako činimo sami sebi "
 }
