--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -24,5 +24,6 @@
   "dhp161:4": "kao i dijamant kamen u kojem se stvori. ",
   "dhp162:1": "Naša nas zlodela potpuno obuzmu, ",
   "dhp162:2": "kao puzavica stablo sala, ",
-  "dhp162:3": "i tako činimo sami sebi "
+  "dhp162:3": "i tako činimo sami sebi ",
+  "dhp162:4": "baš ono što nam naši neprijatelji žele. "
 }
