--- a/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn22/sn22.89_translation-it-soma.json
@@ -31,5 +31,6 @@
   "sn22.89:10.6": "per questo io dico che la materia non e' me... ",
   "sn22.89:11.1": "Quando le cinque catene inferiori sono state abbandonate dal nobile discepolo, per quello allora e': \"nelle cinque cataste ardenti qualsiasi residuo di concetto io sono, desiderio io sono, tendenza io sono, e' stato sradicato ",
   "sn22.89:11.2": "In un'altra occasione sta osservando il sorgere e svanire delle cinque cataste ardenti- ",
-  "sn22.89:11.3": "cosi' e' la materia, cosi' e' l'origine della materia, cosi' e' lo svanire "
+  "sn22.89:11.3": "cosi' e' la materia, cosi' e' l'origine della materia, cosi' e' lo svanire ",
+  "sn22.89:11.8": "quando contempla vedendo il sorgere e svanire in queste cinque cataste ardenti, qualsiasi cosa e' residua nelle cinque cataste ardenti circa concetto \"io sono,\" desiderio 'io sono', o tendenza  \"io sono,\" e' eradicato, e uno va verso l'eradicazione. "
 }
