Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -25,5 +25,6 @@
   "dhp162:1": "Naša nas zlodela potpuno obuzmu, ",
   "dhp162:2": "kao puzavica stablo sala, ",
   "dhp162:3": "i tako činimo sami sebi ",
-  "dhp162:4": "baš ono što nam naši neprijatelji žele. "
+  "dhp162:4": "baš ono što nam naši neprijatelji žele. ",
+  "dhp163:1": "Lako je loša dela počiniti, "
 }
