Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -27,5 +27,6 @@
   "dhp162:3": "i tako činimo sami sebi ",
   "dhp162:4": "baš ono što nam naši neprijatelji žele. ",
   "dhp163:1": "Lako je loša dela počiniti, ",
-  "dhp163:2": "štetna za samoga sebe, "
+  "dhp163:2": "štetna za samoga sebe, ",
+  "dhp163:3": "ali ono što nam jeste korist i zasluga, "
 }
