Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -30,5 +30,6 @@
   "dhp163:2": "štetna za samoga sebe, ",
   "dhp163:3": "ali ono što nam jeste korist i zasluga, ",
   "dhp163:4": "mnogo je teže. ",
-  "dhp164:1": "Oni koji se vođeni "
+  "dhp164:1": "Oni koji se vođeni ",
+  "dhp164:2": "svojim pogrešnim stavovima "
 }
