--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -31,5 +31,6 @@
   "dhp163:3": "ali ono što nam jeste korist i zasluga, ",
   "dhp163:4": "mnogo je teže. ",
   "dhp164:1": "Oni koji se vođeni ",
-  "dhp164:2": "svojim pogrešnim stavovima "
+  "dhp164:2": "svojim pogrešnim stavovima ",
+  "dhp164:3": "izruguju učenju plemenitih, "
 }
