Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -32,5 +32,6 @@
   "dhp163:4": "mnogo je teže. ",
   "dhp164:1": "Oni koji se vođeni ",
   "dhp164:2": "svojim pogrešnim stavovima ",
-  "dhp164:3": "izruguju učenju plemenitih, "
+  "dhp164:3": "izruguju učenju plemenitih, ",
+  "dhp164:4": "u življenju ispravnih, "
 }
