Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -33,5 +33,6 @@
   "dhp164:1": "Oni koji se vođeni ",
   "dhp164:2": "svojim pogrešnim stavovima ",
   "dhp164:3": "izruguju učenju plemenitih, ",
-  "dhp164:4": "u življenju ispravnih, "
+  "dhp164:4": "u življenju ispravnih, ",
+  "dhp164:5": "takvi se, slično bambusu, "
 }
