--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -34,5 +34,6 @@
   "dhp164:2": "svojim pogrešnim stavovima ",
   "dhp164:3": "izruguju učenju plemenitih, ",
   "dhp164:4": "u življenju ispravnih, ",
-  "dhp164:5": "takvi se, slično bambusu, "
+  "dhp164:5": "takvi se, slično bambusu, ",
+  "dhp164:6": "od sopstvenog ploda slamaju. "
 }
