Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -35,5 +35,6 @@
   "dhp164:3": "izruguju učenju plemenitih, ",
   "dhp164:4": "u življenju ispravnih, ",
   "dhp164:5": "takvi se, slično bambusu, ",
-  "dhp164:6": "od sopstvenog ploda slamaju. "
+  "dhp164:6": "od sopstvenog ploda slamaju. ",
+  "dhp165:1": "Sami zlo činimo, "
 }
