Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -36,5 +36,6 @@
   "dhp164:4": "u življenju ispravnih, ",
   "dhp164:5": "takvi se, slično bambusu, ",
   "dhp164:6": "od sopstvenog ploda slamaju. ",
-  "dhp165:1": "Sami zlo činimo, "
+  "dhp165:1": "Sami zlo činimo, ",
+  "dhp165:2": "sami sebe prljamo, "
 }
