Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -37,5 +37,6 @@
   "dhp164:5": "takvi se, slično bambusu, ",
   "dhp164:6": "od sopstvenog ploda slamaju. ",
   "dhp165:1": "Sami zlo činimo, ",
-  "dhp165:2": "sami sebe prljamo, "
+  "dhp165:2": "sami sebe prljamo, ",
+  "dhp165:3": "sami se od zla uzdržavamo, "
 }
