Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -38,5 +38,6 @@
   "dhp164:6": "od sopstvenog ploda slamaju. ",
   "dhp165:1": "Sami zlo činimo, ",
   "dhp165:2": "sami sebe prljamo, ",
-  "dhp165:3": "sami se od zla uzdržavamo, "
+  "dhp165:3": "sami se od zla uzdržavamo, ",
+  "dhp165:4": "sami sebe pročišćujemo, "
 }
