--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -40,5 +40,6 @@
   "dhp165:2": "sami sebe prljamo, ",
   "dhp165:3": "sami se od zla uzdržavamo, ",
   "dhp165:4": "sami sebe pročišćujemo, ",
-  "dhp165:5": "čistoća i prljavština od nas zavise; "
+  "dhp165:5": "čistoća i prljavština od nas zavise; ",
+  "dhp165:6": "niko nikog pročistiti ne može. "
 }
