Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -42,5 +42,6 @@
   "dhp165:4": "sami sebe pročišćujemo, ",
   "dhp165:5": "čistoća i prljavština od nas zavise; ",
   "dhp165:6": "niko nikog pročistiti ne može. ",
-  "dhp166:1": "Sopstveni cilj ne zameni za tuđi, "
+  "dhp166:1": "Sopstveni cilj ne zameni za tuđi, ",
+  "dhp166:2": "makoliko uzvišen bio, "
 }
