--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp157-166_translation-sr-brankokovacevic.json
@@ -43,5 +43,6 @@
   "dhp165:5": "čistoća i prljavština od nas zavise; ",
   "dhp165:6": "niko nikog pročistiti ne može. ",
   "dhp166:1": "Sopstveni cilj ne zameni za tuđi, ",
-  "dhp166:2": "makoliko uzvišen bio, "
+  "dhp166:2": "makoliko uzvišen bio, ",
+  "dhp166:3": "sopstveni cilj dobro razumevši, "
 }
