--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -1,4 +1,5 @@
 {
   "dhp167:0.1": "Kratka zbirka Budnih govora ",
-  "dhp167:0.2": "Reči mudrosti "
+  "dhp167:0.2": "Reči mudrosti ",
+  "dhp167:0.3": "Svet "
 }
