--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -2,5 +2,6 @@
   "dhp167:0.1": "Kratka zbirka Budnih govora ",
   "dhp167:0.2": "Reči mudrosti ",
   "dhp167:0.3": "Svet ",
-  "dhp167:1": "Niska dela ne čini, "
+  "dhp167:1": "Niska dela ne čini, ",
+  "dhp167:2": "nepažljivost ne sledi, "
 }
