Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -3,5 +3,6 @@
   "dhp167:0.2": "Reči mudrosti ",
   "dhp167:0.3": "Svet ",
   "dhp167:1": "Niska dela ne čini, ",
-  "dhp167:2": "nepažljivost ne sledi, "
+  "dhp167:2": "nepažljivost ne sledi, ",
+  "dhp167:3": "pogrešne stavove ne prihvataj, "
 }
