Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -5,5 +5,6 @@
   "dhp167:1": "Niska dela ne čini, ",
   "dhp167:2": "nepažljivost ne sledi, ",
   "dhp167:3": "pogrešne stavove ne prihvataj, ",
-  "dhp167:4": "za svet se ne veži. "
+  "dhp167:4": "za svet se ne veži. ",
+  "dhp168:1": "Ustaj! Nepažnji se ne prepuštaj. "
 }
