Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -7,5 +7,6 @@
   "dhp167:3": "pogrešne stavove ne prihvataj, ",
   "dhp167:4": "za svet se ne veži. ",
   "dhp168:1": "Ustaj! Nepažnji se ne prepuštaj. ",
-  "dhp168:2": "Učenje praktikuj kako treba. "
+  "dhp168:2": "Učenje praktikuj kako treba. ",
+  "dhp168:3": "Ko u Učenju živi, "
 }
