Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -8,5 +8,6 @@
   "dhp167:4": "za svet se ne veži. ",
   "dhp168:1": "Ustaj! Nepažnji se ne prepuštaj. ",
   "dhp168:2": "Učenje praktikuj kako treba. ",
-  "dhp168:3": "Ko u Učenju živi, "
+  "dhp168:3": "Ko u Učenju živi, ",
+  "dhp168:4": "srećan je u životu, i ovom i narednom. "
 }
