Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -16,5 +16,6 @@
   "dhp169:4": "srećan je u životu, i ovom i narednom. ",
   "dhp170:1": "Ovaj svet je poput mehura, ",
   "dhp170:2": "ovaj svet je poput opsene, ",
-  "dhp170:3": "onog ko tako gleda na ovaj svet "
+  "dhp170:3": "onog ko tako gleda na ovaj svet ",
+  "dhp170:4": "gospodar smrti ne vidi. "
 }
