Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -19,5 +19,6 @@
   "dhp170:3": "onog ko tako gleda na ovaj svet ",
   "dhp170:4": "gospodar smrti ne vidi. ",
   "dhp171:1": "Pogledaj ovaj svet, ",
-  "dhp171:2": "nalik raskošnoj kraljevskoj kočiji, "
+  "dhp171:2": "nalik raskošnoj kraljevskoj kočiji, ",
+  "dhp171:3": "opčinjeni njime, nezreli propadaju, "
 }
