Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -26,5 +26,6 @@
   "dhp172:2": "a sad više nije, ",
   "dhp172:3": "osvetljava ovaj svet, ",
   "dhp172:4": "kao Mesec kad iza oblaka izroni. ",
-  "dhp173:1": "Ko svoje rđavo delo "
+  "dhp173:1": "Ko svoje rđavo delo ",
+  "dhp173:2": "kasnije nadmaši dobrim, "
 }
