Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -27,5 +27,6 @@
   "dhp172:3": "osvetljava ovaj svet, ",
   "dhp172:4": "kao Mesec kad iza oblaka izroni. ",
   "dhp173:1": "Ko svoje rđavo delo ",
-  "dhp173:2": "kasnije nadmaši dobrim, "
+  "dhp173:2": "kasnije nadmaši dobrim, ",
+  "dhp173:3": "taj osvetli ovaj svet, "
 }
