Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -36,5 +36,6 @@
   "dhp174:4": "malo je onih što do neba stignu. ",
   "dhp175:1": "Put Sunca labudovi lete, ",
   "dhp175:2": "oni sa moćima vazduhom, ",
-  "dhp175:3": "ali mudri, savladavši Marine horde, "
+  "dhp175:3": "ali mudri, savladavši Marine horde, ",
+  "dhp175:4": "iz ovog sveta odlaze. "
 }
