Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -37,5 +37,6 @@
   "dhp175:1": "Put Sunca labudovi lete, ",
   "dhp175:2": "oni sa moćima vazduhom, ",
   "dhp175:3": "ali mudri, savladavši Marine horde, ",
-  "dhp175:4": "iz ovog sveta odlaze. "
+  "dhp175:4": "iz ovog sveta odlaze. ",
+  "dhp176:1": "Za onoga ko krši jedini zakon, "
 }
