Translations by Bundi-py to translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/kn/dhp/dhp167-178_translation-sr-brankokovacevic.json
@@ -39,5 +39,6 @@
   "dhp175:3": "ali mudri, savladavši Marine horde, ",
   "dhp175:4": "iz ovog sveta odlaze. ",
   "dhp176:1": "Za onoga ko krši jedini zakon, ",
-  "dhp176:2": "za onoga ko laže, "
+  "dhp176:2": "za onoga ko laže, ",
+  "dhp176:3": "za onoga ko ne mari za buduće živote, "
 }
